syntax = "proto3";

option go_package = "genprotos/";

package protos;

import "election.proto";
import "public.proto";
import "candidate.proto";

service PublicVoteService {
    rpc CreatePublicVote(PublicVote) returns (Void) {}
    rpc DeletePublicVote(ById) returns (Void) {}
    rpc UpdatePublicVote(PublicVote) returns(Void){}
    rpc GetByIdPublicVote(ById) returns (PublicVote) {}
    rpc GetAllPublucVotes(Void) returns (GetAllPublicVote) {}
}

message PublicVote {
    string id = 1;
    Election election =2;
    Public public =3;
    Candidate candidate=4;
}

message GetAllPublicVote{
  repeated PublicVote publicVotes=1;
}